# CartRider

CartRider_SDK/cartrider_drive_controller/: package.xml
CartRider_SDK/cartrider_drive_controller/include/cartrider_drive_controller/: ackermann_drive.hpp  differential_drive.hpp
CartRider_SDK/cartrider_drive_controller/launch/: frontbot.launch.py  joy.launch.py  rearbot.launch.py
CartRider_SDK/cartrider_drive_controller/param/: joy.yaml  rearbot.yaml
CartRider_SDK/cartrider_drive_controller/src/: frontbot_control_node.cpp  teleop_joystick.cpp  teleop_keyboard.cpp
CartRider_SDK/cartrider_dynamixel_sdk/include/cartrider_dynamixel_sdk/: hardware_node.hpp
CartRider_SDK/cartrider_dynamixel_sdk/launch/: bringup.launch.py
CartRider_SDK/cartrider_dynamixel_sdk/param/: motors.yaml
CartRider_SDK/cartrider_dynamixel_sdk/src/: ax12a_test_node.cpp
CartRider_SDK/cartrider_mightyzap_sdk/: package.xml
CartRider_SDK/cartrider_mightyzap_sdk/launch/: bringup.launch.py
CartRider_SDK/cartrider_mightyzap_sdk/src/: hardware_node.cpp
CartRider_SDK/cartrider_rmd_sdk/: package.xml
CartRider_SDK/cartrider_rmd_sdk/include/cartrider_rmd_sdk/: hardware_node.hpp
CartRider_SDK/cartrider_rmd_sdk/launch/: bringup.launch.py
CartRider_SDK/cartrider_rmd_sdk/src/: hardware_node.cpp  rmd_scan.cpp  rmd_test_node.cpp
CartRider_SDK/cartrider_vesc_sdk/: package.xml
CartRider_SDK/cartrider_vesc_sdk/launch/: bringup.launch.py
CartRider_SDK/cartrider_vesc_sdk/msg/: MotorCommandArray.msg
CartRider_SDK/cartrider_vesc_sdk/src/: hardware_node.cpp  vesc_test_node.cpp
CartRider_Vision/cartrider_vision/: frontbot.launch.py  package.xml  setup.cfg  setup.py
CartRider_Vision/cartrider_vision/cartrider_vision/: rs_aruco_node.py  rs_node.py  rs_pcd_node.py  vision_node.py  zed_yolo_node.py
CartRider_Vision/cartrider_vision/launch/: bringup.launch.py  frontbot.launch.py  lidar_rgb_overlay.launch.py  rearbot.launch.py  rs.launch.py  vision.launch.py
CartRider_Vision/cartrider_vision/urdf/: sensors.urdf
cartrider_drive_controller/: CMakeLists.txt  package.xml
cartrider_drive_controller/include/cartrider_drive_controller/: ackermann_drive.hpp  differential_drive.hpp
cartrider_drive_controller/launch/: frontbot.launch.py  joy.launch.py  rearbot.launch.py
cartrider_drive_controller/param/: frontbot.yaml  joy.yaml  rearbot.yaml
cartrider_drive_controller/scripts/: frontbot_state_plotter.py
cartrider_drive_controller/src/: frontbot_control_node.cpp  frontbot_odom_node.cpp  frontbot_test_node.cpp  rearbot_control_node.cpp  rearbot_odom_node.cpp  teleop_joystick.cpp  teleop_keyboard.cpp
cartrider_dynamixel_sdk/: CMakeLists.txt  package.xml
cartrider_dynamixel_sdk/src/: hardware_node.cpp
cartrider_mightyzap_sdk/: CMakeLists.txt
cartrider_mightyzap_sdk/include/cartrider_mightyzap_sdk/: hardware_node.hpp
cartrider_mightyzap_sdk/param/: motors.yaml
cartrider_mightyzap_sdk/src/: hardware_node.cpp  mightyzap_test_node.cpp
cartrider_rmd_sdk/: CMakeLists.txt  package.xml
cartrider_rmd_sdk/include/cartrider_rmd_sdk/: hardware_node.hpp
cartrider_rmd_sdk/launch/: bringup.launch.py
cartrider_rmd_sdk/msg/: MotorState.msg  MotorStateArray.msg
cartrider_rmd_sdk/param/: motors.yaml
cartrider_rmd_sdk/src/: hardware_node.cpp  rmd_config.cpp  rmd_scan.cpp  rmd_test_node.cpp
cartrider_vesc_sdk/: CMakeLists.txt  package.xml
cartrider_vesc_sdk/include/cartrider_vesc_sdk/: hardware_node.hpp
cartrider_vesc_sdk/launch/: bringup.launch.py
cartrider_vesc_sdk/msg/: MotorCommand.msg
cartrider_vesc_sdk/param/: motors.yaml
cartrider_vesc_sdk/src/: hardware_node.cpp  vesc_test_node.cpp
