<?xml version="1.0"?>
<package format="3">
  <name>cartrider_dynamixel_sdk</name>
  <version>0.0.0</version>
  <description>CartRider Dynamixel hardware interface package</description>
  <maintainer email="baek@example.com">baek</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>dynamixel_sdk</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>