<?xml version="1.0"?>
<package format="3">
  <name>cartrider_mightyzap_sdk</name>
  <version>0.0.1</version>
  <description>mightyZAP 12Lf actuator ROS2 SDK</description>

  <maintainer email="bjw94@example.com">baek</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>ament_index_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>